# HackYeah_2025

./: .dockerignore  .env.example  .gitignore  Dockerfile  JWT_AUTH.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py
.github/workflows/: cd-be.yml  cd.yml  ci.yml
app/: config.py  db_connection.py  logs.py  main.py  settings.py
app/crud/: certificate.py  chat.py  domain.py  event.py  location.py  locations.py  message.py  registration.py  requirement.py  review.py  task.py  template.py  time_log.py  user.py  user_crud.py  volunteer.py
app/db_handler/: db_connection.py  db_util.py  example_data.py
app/models/: event.py  location.py  organisation.py  registration.py  requirement.py  skill.py  task.py  template.py  user.py
app/routes/: __init__.py  auth.py  event.py  health_check.py  navigation.py  register.py  user.py
app/schemas/: db_models.py  enums.py
app/services/: osm_maps.py  world_time.py
app/static/css/: styles.css
app/static/js/: scripts.js
app/templates/: base.html  index.html  login.html  osm_map.html  osm_map_java_template.html  register.html
app/utils/: auth.py
backend/: .env.example  pyproject.toml
backend/.github/workflows/: python-tests.yml
backend/app/: db_connection.py  main.py  settings.py
backend/app/crud/: event.py  locations.py  organisation.py  review.py  user.py  user_crud.py  volunteer.py
backend/app/schemas/: db_models.py  enums.py
backend/app/services/: osm_maps.py
backend/app/static/css/: style.css
backend/app/templates/: base.html
backend/app/utils/: time_utils.py
backend/tests/: test_utils.py
data/: Szkoły podstawowe samorządowe w roku 2023-2024 - liczba uczniów (2025-10-04 23-03-03).csv
frontend/: .env.example  .gitignore  App.example.tsx  QUICKSTART.md  README.md  app.json  package-lock.json  package.json
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/android/app/src/main/java/com/hackyeahapp/: MainActivity.kt  MainApplication.kt
frontend/android/app/src/main/res/values/: strings.xml
frontend/ios/: Podfile
frontend/ios/HackYeahApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
frontend/ios/HackYeahApp.xcodeproj/: project.pbxproj
frontend/ios/HackYeahApp.xcodeproj/xcshareddata/xcschemes/: HackYeahApp.xcscheme
frontend/src/services/: api.ts
frontend/src/types/: env.d.ts  index.ts
static/: index.html
tests/: conftest.py  test_auth.py  test_health_check.py  test_models.py  test_navigation_routes.py  test_user_routes.py  test_utils.py
