[project]
name = "hackyeah-2025"
version = "0.2.1"
description = "Solution to HackYeah 2025 challenge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "jinja2>=3.1.6",
    "pytz>=2025.2",
    "tzdata>=2025.2",
    "sqlalchemy>=2.0.43",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "psycopg2-binary>=2.9.10",
    "geopy>=2.4.1",
    "pandas>=2.3.3",
    "folium>=0.20.0",
    "pyjwt>=2.10.1",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.13.3"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__init__.py",
]

line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
